--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Razrbit - Android SDK and sample</string>
+    <string name="app_name">LUXSTACK - Razrbit Android SDK and sample</string>
     <string name="action_settings">Settings</string>
 
     <string-array name="functionNames">
